# CaPTk2.0

./: CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml
Applications/: AppList.cmake
Applications/CaPTkApp/: CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake.in  CPackOptions.cmake  CaPTkApp.cpp  MitkCaPTkApp.cpp  MitkCaPTkApp.ini  README.md  startMitkCaPTkApp.bat.in  target_libraries.cmake
Applications/CaPTkApp/icons/: icon.icns
Applications/CaPTkInciSe/: CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake.in  CPackOptions.cmake  MitkCaPTkInciSe.cpp  MitkCaPTkInciSe.ini  README.md
Applications/CaptkApp/: CMakeLists.txt  MitkCaptkApp.cpp  MitkCaptkApp.ini  startMitkCaptkApp.bat.in  target_libraries.cmake
Applications/InciSe/: CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake.in  CPackOptions.cmake  InciSe.ini  MitkInciSe.cpp  MitkInciSe.ini  README.md  startInciSe.bat.in
Applications/InciSe/icons/: icon.icns
CMake/: CaPTkInstallRules.cmake  FindCaPTkData.cmake  Findyaml-cpp.cmake  mitkSetupCPack.cmake
CMake/BuildConfigurations/: CaPTkAppAll.cmake
CMake/PackageDepends/: MITK_yaml-cpp_Config.cmake
CMakeExternals/: CaPTkData.cmake  CaPTkData.h.in  ExternalProjectList.cmake  yaml-cpp.cmake
Modules/: ModuleList.cmake
Modules/CaPTkCommon/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkCommon/cbica_toolkit/src/: cbicaUtilities.cpp
Modules/CaPTkCommon/cmdapps/: CMakeLists.txt  CaPTkCohortJsonFromFilesystemCmdApp.cpp  CaPTkCohortJsonOperationsCmdApp.cpp  CaPTkROIConstructionCmdApp.cpp
Modules/CaPTkCommon/include/: CaPTkCohort.h  CaPTkCohortImage.h  CaPTkCohortJsonFromFilesystem.h  CaPTkCohortJsonOperations.h  CaPTkCohortOperations.h  CaPTkCohortSeries.h  CaPTkCohortStudy.h  CaPTkCohortSubject.h  CaPTkFeatureScalingClass.h  CaPTkItkAdaptiveGeodesicDistanceFilter.h  CaPTkItkAdaptiveGeodesicDistanceFilter.hxx  CaPTkROIConstruction.h  CaPTkROIConstruction.hxx  CaPTkROIConstructionHelperItk.hxx  CaPTkROIConstructionImplementation.hxx  CaPTkTrainingModule.h  CaPTkWriteJsonToFile.h
Modules/CaPTkCommon/src/: CaPTkCohort.cpp  CaPTkCohortImage.cpp  CaPTkCohortJsonFromFilesystem.cpp  CaPTkCohortJsonOperations.cpp  CaPTkCohortOperations.cpp  CaPTkCohortSeries.cpp  CaPTkCohortStudy.cpp  CaPTkCohortSubject.cpp  CaPTkFeatureScalingClass.cpp  CaPTkROIConstruction.cpp  CaPTkROIConstruction.hxx  CaPTkROIConstructionCreateLatticePoints.h  CaPTkROIConstructionHelper.h  CaPTkROIConstructionHelper.hxx  CaPTkROIConstructionHelperBase.cpp  CaPTkROIConstructionHelperBase.h  CaPTkROIConstructionHelperItk.h  CaPTkROIConstructionHelperItk.hxx  CaPTkROIConstructionImplementation.h  CaPTkROIConstructionImplementation.hxx  CaPTkROIConstructionItkHelper.h  CaPTkROIConstructionItkHelperBase.h  CaPTkTrainingModule.cpp  CaPTkWriteJsonToFile.cpp  SpacedMaskPoints.hpp
Modules/CaPTkCommon/src/internal/: CaPTkROIConstruction.h  CaPTkROIConstruction.hxx  CaPTkROIConstructionHelper.h  CaPTkROIConstructionHelper.hxx  FeatureScalingClass.h
Modules/CaPTkCommon/test/: CMakeLists.txt
Modules/CaPTkExample/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkExample/cmdapps/: CMakeLists.txt  CaPTkExampleCmdApp.cpp
Modules/CaPTkExample/include/: CaPTkExampleAlgorithm.h  captkExampleAlgorithm.h
Modules/CaPTkInteractiveSegmentation/: CMakeLists.txt
Modules/CaPTkInteractiveSegmentation/cmdapps/: CMakeLists.txt
Modules/CaPTkInteractiveSegmentationModule/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkInteractiveSegmentationModule/cmdapps/: CMakeLists.txt  CaPTkInteractiveSegmentation.cpp  ExampleCmdApp.cpp
Modules/CaPTkLegacyCommon/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkPHIEstimator/: CMakeLists.txt  files.cmake
Modules/CaPTkPHIEstimator/cmdapps/: CMakeLists.txt  CaPTkPHiEstimatorCmdApp.cpp
Modules/CaPTkSurvival/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkSurvival/cmdapps/: CMakeLists.txt  CaPTkSurvivalPredictionCmdApp.cpp
Modules/CaPTkSurvival/include/: CaPTkClassifierUtils.h  CaPTkDefines.h  CaPTkEnums.h  CaPTkFeatureExtractionClass.h  CaPTkSurvival.h  CaPTkSurvivalPredictionAlgorithm.h
Modules/CaPTkSurvival/src/: CaPTkFeatureExtractionClass.cpp  CaPTkSurvival.cpp  CaPTkSurvivalPredictionAlgorithm.cpp
Modules/CaPTkTraining/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkTraining/cmdapps/: CMakeLists.txt  CaPTkTrainingCmdApp.cpp
Modules/CaPTkTrainingModule/: CMakeLists.txt  files.cmake
Modules/CaPTkTrainingModule/cmdapps/: CMakeLists.txt  CaPTkTrainingModule.cpp
Modules/Delthis/: CMakeLists.txt  files.cmake
Modules/ExampleModule/: CMakeLists.txt
Modules/PHIEstimator/: CMakeLists.txt
Modules/PHIEstimatorModule/: CMakeLists.txt  README.md  files.cmake
Modules/YamlCpp/: CMakeLists.txt  files.cmake
Plugins/: PluginList.cmake
Plugins/org.mitk.cbica.captk.application/: CMakeLists.txt  README.md  files.cmake  plugin.xml
Plugins/org.mitk.cbica.captk.interactivesegmentation/: CMakeLists.txt  README.md  files.cmake
Plugins/org.mitk.cbica.captk.phiestimator/: CMakeLists.txt  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.cbica.captk.training/: CMakeLists.txt  README.md  files.cmake  plugin.xml
Plugins/org.mitk.cbica.captk.trainingplugin/: CMakeLists.txt  README.md  files.cmake  plugin.xml
Plugins/org.mitk.cbica.captk.ui/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.PHIEstimatorPlugin/: CMakeLists.txt  README.md  files.cmake  plugin.xml
Plugins/org.mitk.gui.qt.captkapplication/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.captkinteractivesegmentation/: CMakeLists.txt  files.cmake  plugin.xml
Plugins/org.mitk.gui.qt.exampleplugin/: CMakeLists.txt
Plugins/upenn.cbica.captk.application/: CMakeLists.txt  README.md  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.captk.brain.phiestimator/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.captk.brain.survival/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
(+262 files in other folders)
